# SunRay

./: .gitignore  README.md  SolarWindTest.ipynb  Sunray_split_scat_refr.py  a.txt  a_gpu.txt  autograd_demo.ipynb  autograd_test.ipynb  autograd_test2.ipynb  calc_dndr.ipynb  ducting_model.ipynb  gaussianFit2d.py  merge_small.ipynb  moveData.sh  mpi_job_sbatch.sh  mpi_job_sbatch_GPU3.sh  pyproject.toml  ray_scat_swind_test.ipynb  ray_scat_test.ipynb  ray_statistical.ipynb  ray_test.ipynb  ray_test_v01.ipynb  ray_test_validate.ipynb  ray_test_validate_refrac.ipynb  requirements.txt  sunRay_MPI.py  sunRay_SingleNodeMP.py  sunRay_tmp.py  sunRay_v0.py  sunray_ParsetReduction.py  sunray_offset.ipynb  sunray_offset_inte.ipynb  sunray_test_lv1_data.ipynb
LOSBending/: test_offsetMeasure.ipynb
ModelNeBfield/: Bfield_test.ipynb
RayBfield/: Bfield_test.ipynb  Ne_test.ipynb
benchmark/: profile_bench.txt  profile_bench2.txt
demo/: SolarWindTest.ipynb  autograd_demo.ipynb  autograd_test.ipynb  ray_scat_test.ipynb  ray_scat_test_f150_173.ipynb  ray_statistical.ipynb  sunRay_SingleNodeMP.py  sunray_ParsetReduction.py  sunray_offset.ipynb  sunray_offset_inte.ipynb
demo/LOSBending/: test_offsetMeasure.ipynb
demo/ModelNeBfield/: ducting_model.ipynb
sunRay/: SunRayData.py  SunRayRunAnisScat.py  SunRayRunAnisScat3DNe.py  SunRayRunAnisScatLOS.py  SunRayRunAnisScatSWind.py  densityModel.py  parameters.py  plasmaFreq.py  scattering.py  showPlot.py  solarWind.py  solver.py  statisticalRays.py  tool.py
sunRay_SCC/: sunRay_MPI.py  sunRay_MPI_GPU.py
usefulBashScript/: uploadCode.sh
(+9 files in other folders)
