[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunRay"
version = "0.1.0"  # You may want to adjust this based on the current version
description = "A Python package for calculating ray paths in the solar atmosphere"
readme = "README.md"
authors = [{ name = "Peijin Zhang", email = "peijin@mit.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["solar physics", "ray tracing", "astronomy"]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "sunpy",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/peijin94/SunRay"
Documentation = "https://github.com/peijin94/SunRay/blob/main/README.md"
"Bug Tracker" = "https://github.com/peijin94/SunRay/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sunRay*"]